# TrackerGeneratorProto

./: CMakeLists.txt
CmakeIncludes/: Bipart.txt  Common.txt  DetectorFace.txt  FilterHungarianKalman.txt  FilterKalman.txt  Hungarian.txt  InputCamera.txt  MainThread.txt  OutputWindow.txt
src/: main.cpp
src/Common/: defines.h
src/Detector/Common/: IDetector.h
src/Detector/FaceDetector/: FaceDetector.cpp  FaceDetector.h
src/Input/CameraInput/: CameraInput.cpp  CameraInput.h
src/Input/Common/: IInput.h
src/MainThread/: BaseWorkerClass.h
src/Output/Common/: IOutput.h
src/Output/OutputWindow/: OutputWindow.cpp  OutputWindow.h
src/Tracker/BipartKalmanTracker/: BipartKalmanTracker.cpp  BipartKalmanTracker.h
src/Tracker/Common/: ITracker.h  TrackerSettings.h
src/Tracker/Common/Track/: Track.cpp  Track.h
src/Tracker/HungarianKalmanTracker/: HungarianKalmanTracker.cpp  HungarianKalmanTracker.h
